# derbyfish-flow

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.sync  FISH_SPECIES_COIN_TEMPLATE.md  FRONTEND_INTERACTION_GUIDE.MD  Project_README.md  README.md  SCRIPT.md  SIMPLE_SOLUTION.md  SPECIES_COIN_FACTORY_GUIDE.md  SUCCESSFUL_NFT_MINT_EXAMPLE.md  TESTING_DEPLOYMENT.md  TESTING_FUNCTIONS.md  TESTING_TESTNET.md  WALLEYE_NFT_TESTING_GUIDE.md  app-fastify.js  app.js  app.py  docker-compose.staging.yml  docker-compose.yml  env.example  flowWrapper.js  fundWallets.js  fundWallets.py  generateFlowAccounts.js  generateFlowAccounts.py  index.html  package.json  pyproject.toml  pytest.ini  requirements.txt  run_create_all_vault.py  startup-check.sh  startup-sync.sh  syncWallets.js  syncWallets.py  (+3 more)
documentation/: BaitCoin.md  CLI.md  FishCardV1.md  FlowWrapper.md  TransactionLogging.md  WALLET_CREATION_PIPELINE.md  WalletSyncService.md
flow/: .gitignore  README_FishNFT.md  flow.json  test_nft_args.json  test_walleye_quick.sh
migrations/: 001_clear_wallet_table.sql  002_fix_wallet_rls_policies.sql  003_create_transactions_table.sql  004_add_admin_wallet.sql  005_wallet_creation_pipeline.sql
pkeys/: 00562993-e3c4-4f05-acbd-84cdc2077c6d.pkey  009b5dfb-f5d1-4bc8-9565-cd4e13001e65.pkey  00d2f40b-a75b-46e9-87fd-70cea49fb21a.pkey  00d3f8b0-fd5a-48f3-bfdf-ed4abe54a1a9.pkey  00dcfbcc-8190-401d-b9ef-0df36556890d.pkey  010724fe-7376-4618-815a-4d190eeb3532.pkey  01667ff4-9523-4fcc-96c5-ed7d5e800a80.pkey  018be0f7-9fb3-4f06-a43e-31413005bffa.pkey  (+1247 more)
(+175 files in other folders)
